# Snake_MP

./: API.md  Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: game.rs  main.rs  packet.rs  renderer.rs
common/src/: lib.rs  packet.rs
common/tests/: packet_test.rs
server/: Cargo.toml
server/src/: game.rs  main.rs  packet.rs
src/: game.rs  main.rs  renderer.rs  util.rs
