[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["David Amorim"]
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"
mio = { version = "0.8.10", features = ["os-poll", "net"] }
